--- a/Bwl.Tools/Bwl.Tools.vbproj
+++ b/Bwl.Tools/Bwl.Tools.vbproj
@@ -65,6 +65,7 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Внимание! Прочитать!.txt" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
       <AutoGen>True</AutoGen>
